--- a/src/app/pages/stats/stats-chart/stats-chart.component.css
+++ b/src/app/pages/stats/stats-chart/stats-chart.component.css
@@ -1,12 +1,3 @@
-.colorbox {
-  width: 10px;
-  height: 10px;
-  border-radius: 0.1rem;
-  display: inline-block;
-  margin-right: 0.5rem;
-  background-color: #fff;
-}
-
 .colorbox-md {
   width: 20px;
   height: 20px;
